Fix visual overlap with keyboard showing in mobile landscape

--- a/src/components/CalculatorItem/CalculatorItem.scss
+++ b/src/components/CalculatorItem/CalculatorItem.scss
@@ -3,7 +3,7 @@
 
   // Readonly/disabled styles shouldn't be applied when this attribute is present.
   &[data-oaf-keyboard-hack] {
-    @apply bg-transparent #{!important};
+    @apply bg-gray-800 #{!important};
   }
 }
 
